# ms_project-mcp

./: CHANGELOG.md  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml
skills/lean-planning/: SKILL.md
src/lean_planning_mcp/: __init__.py  awp.py  lps.py  mpp_loader.py  pbip_writer.py  server.py  sidecar.py
src/project_mcp/: awp.py  lps.py  mpp_loader.py  server.py
tests/: test_awp.py  test_lps.py  test_mspdi.py  test_pbip_writer.py  test_server.py
