[project]
name = "lean-planning-mcp"
version = "0.2.0"
description = "MCP server for Microsoft Project schedules with AWP and LPS lean-construction planning layers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jeff Borges", email = "borgeslimamodeler@gmail.com" }
]
keywords = ["mcp", "microsoft-project", "mspdi", "project-management", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "mcp[cli]>=1.4.1",
]

[project.optional-dependencies]
mpp = [
    "mpxj>=14.0.0",
    "JPype1>=1.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.6.0",
]

[project.scripts]
lean-planning-mcp = "lean_planning_mcp.server:main"

[project.urls]
Homepage = "https://github.com/jeffersonbim/lean-planning-mcp"
Issues = "https://github.com/jeffersonbim/lean-planning-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lean_planning_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/lean_planning_mcp/pbip_writer.py" = ["E501"]
"src/lean_planning_mcp/server.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
